src/sass/_one-room-for-two-adults.scss
.double-room {    
    background-color: $fon-lemon;   
}

.double-room__section {
    padding-top: 32px;

    @include tablet {
        padding-top: 64px;
        position: relative;
        z-index: 1;
    }
    @include desktop {
        margin-bottom: 188px;
        position: relative;
        z-index: 1;
    }
}

.room-picture {

    display: flex;
    justify-content: flex-end;
    padding-bottom: 32px;

    @include tablet {
        position: absolute;
        z-index: 2;
        top: 0px;
        left: 512px;
        justify-content: flex-start;
    }

    @include desktop {
        position: absolute;
        z-index: 2;
        top: 0px;
        left: 580px;
        justify-content: flex-start;
    }
}

.room-picture-img {
    width: 246px;
    
    @include tablet {
        width: 246px;
    }

    @include desktop {
        width: 460px;
    }
}

.section-room__subtitle {
    margin-bottom: 8px;

    font-family: 'Times New Roman';
    font-style: normal;
    font-size: 20px;
    line-height: 1.15;
    color: $subtitle-color;
}

.hotel__title {
    margin-bottom: 32px;

    font-family: 'Film P3';
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: 1.08;
    
    letter-spacing: 0.3em;
    color: #494848;
    
    @include tablet {
        margin-bottom: 62px;
        font-size: 64px;
        line-height: 69px;
    }

    @include desktop {
        margin-bottom: 75px;
        font-size: 64px;
        line-height: 69px;
    }  
}

.hotel__title-secondary {

    margin-bottom: 12px;
    font-family: 'Times New Roman';
    font-style: normal;
    font-weight: 700;

    font-size: 24px;
    line-height: 1.17;
    letter-spacing: 0.05em;
    color: #000000;
    
    @include tablet {
        margin-bottom: 16px;
        font-size: 30px;
        line-height: 1.13;  
    }

    @include desktop {
        margin-bottom: 24px;
        font-size: 36px;
        line-height: 1.14;
    }    
}

.double-room__describe {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 700;
    font-size: 12px;
    line-height: 1.25;
    letter-spacing: 0.02em;
    color: #7A7A7A;
    width: 258px;

    padding-bottom: 32px;

    @include tablet {
        font-size: 16px;
        line-height: 1.25;
        width: 439px;
    
    }

    @include desktop {
        font-size: 16px;
        line-height: 20px;
        
        width: 400px;
    }
}

.room-pictures {
    display: flex;
    flex-direction: column;
    padding-bottom: 32px;

    @include tablet {
        flex-direction: row;
        padding-left: 88px;
    }

    @include desktop {
        flex-direction: row;
        padding-left: 88px;
    }
}

.list {
    list-style: none;
}

.room-pictures-list {
    display: flex;
    gap: 40px;
    align-items: center;
    flex-wrap: nowrap;
}

.room-pictures-list__item {
    background-color: var(--title-white-color);
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 0px 0px 4px 4px;
}

.double-room__img {
    width: 194px;

    @include desktop {
        width: 255px;
    }
}

.buttons-container {
    align-items: center;
    justify-content: center;
    width: 255px;
    height: 255px;
    display: flex;
    flex-direction: column;
    gap: 16px;

    @include tablet {
        padding-left: 326px;
    }

    @include desktop {
        padding-left: 326px;
    }
}

.hotel-button {
    box-sizing: border-box;
    width: 236px;
    height: 48px;
    background: #000000;
    border: 2px solid #FFFFFF;
    border-radius: 25px;

    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 20px;
    letter-spacing: 0.02em;

    color: #F3C653;
}

